# soapyrx

./: .gitignore  CONTRIBUTING  Makefile  README.md  README.org  pyproject.toml
examples/: example.toml
src/: radio.py
src/mypkg/: __init__.py  mylib.py  mymod.py
src/soapyrx/: __init__.py  analyze.py  cli.py  config.py  core.py  dsp.py  helpers.py  lib.py  logger.py  mymod.py  plot.py  plotters.py
